[server] fix dynamic jar loading; [client] better force new; [all] better docker image generation